# glow

./: .clang-format  .gitignore  CMakeLists.txt  build.py  glow.py
ext/: CMakeLists.txt  README.md  versions.txt
res/models/: .gitignore
res/shaders/: blinn_phong.fs  blinn_phong.vs  cube.fs  debug_normals.fs  debug_normals.vs  default.vs  deferred_light_box.fs  deferred_light_box.vs  deferred_shading.fs  deferred_shading.vs  exploding_geometry.gs  gbuffer.fs  gbuffer.vs  gbuffer_ssao.fs  hdr_lighting.fs  hdr_lighting.vs  hdr_to_ldr.fs  hdr_to_ldr.vs  instancing_100.vs  instancing_color_test.vs  instancing_texture_test.fs  instancing_texture_test.vs  instancing_texture_test2.vs  model.fs  model_loading.fs  shadow_mapping.fs  shadow_mapping.vs  shadow_mapping_depth.fs  shadow_mapping_depth.vs  simple_envmap.fs  simple_envmap.vs  simple_quad.fs  simple_quad.vs  simple_quad_depth.fs  simple_skybox.fs  simple_skybox.vs  simple_texture.fs  simple_texture.vs  simple_zbuffer.fs  single_color.vs  (+6 more)
res/textures/: .gitignore
src/: camera.c  camera.h  color.c  color.h  colorspace.c  colorspace.h  console.h  dynarray.c  dynarray.h  file.c  file.h  fullscreen_quad.c  fullscreen_quad.h  imgui_facade.cpp  imgui_facade.h  main.c  main.h  main.inl  maths.c  maths.h  maths_types.h  mesh.c  mesh.h  model.c  model.h  model_assimp.inl  new_array.c  new_array.h  opengl.c  opengl.h  options.c  options.h  options.inc  prelude.h  primitives.h  shader.c  shader.h  texture.c  texture.h  vertices.h  (+2 more)
src/shaders/: cube.fs  cube.vs  default.fs  default.vs
